--- a/index.html
+++ b/index.html
@@ -264,9 +264,181 @@
 
 
  </section>
-    </main>
-    <footer>
+ <section class="m-20">
+    <h3 class="text-4xl text-semibold text-center mt-8 mb-10">Happy <span class ="text-button-primary" >Clients says</span> </h3>
+    <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
+        <div class="card bg-base-100  p-10 border border-gray-50">
+            <figure>
+              <img class="w-36"
+                src="images/others/user-1.png"
+                alt="bike" />
+            </figure>
+            <div class="card-body">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+                <div class="rating rating-lg justify-center text-[#E77C40]">
+                    <input type="radio" name="rating-9" class="rating-hidden" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2"  />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" checked="checked" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                  </div>
+                  <div class="text-center">
+                  <h4 class="text-sm text-semibold text-[#E76F51]">Regina Miles</h4>
+                  <h2 class="text-sm">Banker</h2>
+                </div>
+            </div>
+          </div>
+        <div class="card bg-base-100 p-10 border border-gray-50">
+            <figure>
+              <img class="w-36"
+                src="images/others/user-2.png"
+                alt="bike" />
+            </figure>
+            <div class="card-body">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+                <div class="rating rating-lg justify-center text-[#E77C40]">
+                    <input type="radio" name="rating-9" class="rating-hidden" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2"  />
+                    <input type="radio" name="rating-9" class="mask mask-star-2"checked="checked"/>
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                  </div>
+                  <div class="text-center">
+                  <h4 class="text-sm text-semibold text-[#E76F51]">Alia Jems</h4>
+                  <h2 class="text-sm">Banker</h2>
+                </div>
+            </div>
+          </div>
+        <div class="card bg-base-100 p-10  border border-gray-50">
+            <figure>
+              <img class="w-36"
+                src="images/others/user-3.png"
+                alt="bike" />
+            </figure>
+            <div class="card-body">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+                <div class="rating rating-lg justify-center text-[#E77C40]">
+                    <input type="radio" name="rating-9" class="rating-hidden" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2"  />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" checked="checked" />
+                    <input type="radio" name="rating-9" class="mask mask-star-2" />
+                  </div>
+                  <div class="text-center">
+                  <h4 class="text-sm text-semibold text-[#E76F51]">Mortisia Brasel</h4>
+                  <h2 class="text-sm">Banker</h2>
+                </div>
+            </div>
+          </div>
+        </div>
 
+ </section>
+
+
+ <section class="m-20">
+    <div class="hero min-h-screen">
+        <div class="hero-content border border-gray-50 flex-col lg:flex-row-reverse lg:gap-24  ">
+          <img
+            src="images/others/faq.png"
+            class="  w-1/2 lg:max-w-sm rounded-lg shadow-2xl" />
+          <div class="space-y-10">
+            <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">What are the most important things I should
+                    know about riding a bike?</div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                <div class="collapse-content">
+                  <p>yes</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                    new one?</div>
+                <div class="collapse-content">
+                  <p>no hesitation!</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+ </section>
+    </main>
+    <footer class="">
+
+        <footer class="footer bg-base-300 text-base-content p-10">
+            <nav>
+              <h6 class="footer-title">Services</h6>
+              <a class="link link-hover">Branding</a>
+              <a class="link link-hover">Design</a>
+              <a class="link link-hover">Marketing</a>
+              <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+              <h6 class="footer-title">Company</h6>
+              <a class="link link-hover">About us</a>
+              <a class="link link-hover">Contact</a>
+              <a class="link link-hover">Jobs</a>
+              <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+              <h6 class="footer-title">Social</h6>
+              <div class="grid grid-flow-col gap-4">
+                <a>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    class="fill-current">
+                    <path
+                      d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
+                  </svg>
+                </a>
+                <a>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    class="fill-current">
+                    <path
+                      d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path>
+                  </svg>
+                </a>
+                <a>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    class="fill-current">
+                    <path
+                      d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
+                  </svg>
+                </a>
+              </div>
+            </nav>
+          </footer>
 
 
     </footer>
